--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Django Channels Heroku",
-  "description": "Running a simple chat on Heroku",
-  "repository": "https://github.com/pocosoft/django_channels_heroku",
+  "name": "Holdemon",
+  "description": "Running Texas Holdem Poker on Heroku",
+  "repository": "https://github.com/koualsky/holdemon",
   "keywords": ["django", "channels", "websockets", "heroku"],
   "scripts": {
     "postdeploy": "python manage.py migrate"
