--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ hyperlink==18.0.0
 idna==2.7
 incremental==17.5.0
 msgpack==0.5.6
+psycopg2==2.8.0
 psycopg2-binary
 PyHamcrest==1.9.0
 pytz==2018.5
@@ -24,5 +25,5 @@ Twisted==18.9.0
 txaio==18.8.1
 whitenoise==4.1
 zope.interface==4.5.0
-treys
+treys==0.1.3
 pywin32
