--- a/requirements222.txt
+++ b/requirements222.txt
@@ -1,4 +1,3 @@
-treys==0.1.3
 aioredis==1.1.0
 asgiref==2.3.2
 async-timeout==3.0.1
@@ -17,13 +16,13 @@ hyperlink==18.0.0
 idna==2.7
 incremental==17.5.0
 msgpack==0.5.6
-psycopg2==2.7.5
+psycopg2-binary
 PyHamcrest==1.9.0
 pytz==2018.5
 pywin32==224
 six==1.11.0
+treys==0.1.3
 Twisted==18.9.0
 txaio==18.8.1
 whitenoise==4.1
 zope.interface==4.5.0
-pywin32
