--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,10 +1,10 @@
+treys==0.1.3
 aioredis==1.1.0
 asgiref==2.3.2
 async-timeout==3.0.1
 attrs==18.2.0
 autobahn==18.10.1
 Automat==0.7.0
-certifi==2019.6.16
 channels==2.1.4
 channels-redis==2.3.1
 constantly==15.1.0
@@ -17,17 +17,12 @@ hyperlink==18.0.0
 idna==2.7
 incremental==17.5.0
 msgpack==0.5.6
-pipenv==2018.11.26
-psycopg2==2.7.5
-psycopg2-binary==2.8.3
+psycopg2-binary
 PyHamcrest==1.9.0
 pytz==2018.5
-pywin32==224
 six==1.11.0
-treys==0.1.3
 Twisted==18.9.0
 txaio==18.8.1
-virtualenv==16.7.4
-virtualenv-clone==0.5.3
 whitenoise==4.1
 zope.interface==4.5.0
+pywin32
