--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ psycopg2==2.7.5
 psycopg2-binary==2.8.3
 PyHamcrest==1.9.0
 pytz==2018.5
-pywin32
+pywin32==224
 six==1.11.0
 treys==0.1.3
 Twisted==18.9.0
