--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 aioredis==1.1.0
 asgiref==2.3.2
+asn1crypto==0.24.0
 async-timeout==3.0.1
 attrs==18.2.0
 autobahn==18.10.1
 Automat==0.7.0
 certifi==2019.6.16
+cffi==1.12.3
 channels==2.1.4
 channels-redis==2.3.1
 constantly==15.1.0
+cryptography==2.7
 daphne==2.2.2
 dj-database-url==0.5.0
 Django==2.1.2
@@ -20,9 +23,13 @@ msgpack==0.5.6
 pipenv==2018.11.26
 psycopg2==2.7.5
 psycopg2-binary==2.8.3
+pycparser==2.19
 PyHamcrest==1.9.0
+python-dotenv==0.10.3
 pytz==2018.5
+pywin32==224
 six==1.11.0
+sqlparse==0.3.0
 treys==0.1.3
 Twisted==18.9.0
 txaio==18.8.1
